hphp/test/slow/unserialize-invalid-dynamic-prop-name/slow-empty.php.expectf
Fatal error: Cannot access empty property in %s/slow-empty.php on line 7
